// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v-html > should convert v-html to innerHTML 1`] = `
"
  const n0 = t0()
  _renderEffect(() => _setHtml(n0, code.value))
  return n0
"
`;

exports[`v-html > should raise error if has no expression 1`] = `
"
  const n0 = t0()
  _setHtml(n0, "")
  return n0
"
`;
